# TrackPerfWorkspace

./: .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  newsetup.sh  run  setup.sh
analysis/: BIBPerfGaudi.py  makeEfficiencyPlots.C
ci/: safesource.sh
cmake/: CreateProjectConfig.cmake  Project_Config_Template.cmake.in  TrackPerfWorkspaceConfig.cmake  package_version_template.h.in
example/: CMakeLists.txt  actsPerfGaudi.py  actsseedckf_steer.xml  histograms.root  histograms.root TYP=  output_test.edm4hep.root  reproduceError.py
gaudiBuild/: CMakeCache.txt  Makefile  cmake_install.cmake  run  trackperfworkspaceenv.sh
install/lib/: TrackPerfWorkspace.confdb
install/python/ACTSTracking/: ACTSTrackingPluginsConf.py
install/python/GaudiDD4hep/: InitDD4hepPluginsConf.py
install/python/TrackPerf/: TrackPerfPluginsConf.py
install/share/ACTSTracking/data/: MuColl_v1.root
install/share/ACTSTracking/example/: actsseed_steer.xml  actsseedckf_steer.xml  actstruth_steer.xml  actstruthckf_steer.xml
oneEventBuild/: CMakeCache.txt  Makefile  TrackPerfWorkspace.components  TrackPerfWorkspace.confdb  cmake_install.cmake  install_manifest.txt  run  trackperfworkspaceenv.sh
testGaudi/: CMakeCache.txt  Makefile  TrackPerfWorkspace.components  TrackPerfWorkspace.confdb  TrackPerfWorkspaceConfig.cmake  TrackPerfWorkspaceConfigVersion.cmake  cmake_install.cmake  run  trackperfworkspaceenv.sh
testGaudi/include/TrackPerfWorkspace/: TrackPerfWorkspaceVersion.h
